# ida-framework

./: README.md  pyproject.toml
examples/: basic_argument.py
src/ida/: __init__.py
src/ida/core/: argument.py  claim.py  evidence.py  hypothesis.py
src/ida/reproducibility/: artifacts.py  checklists.py
src/ida/validation/: metrics.py  validator.py
tests/: test_artifacts.py  test_core_structure.py  test_validator.py
