[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-framework"
version = "0.1.0"
description = "Investigative Discourse Analysis Framework for rigorous AI research"
readme = "README.md"
authors = [{ name = "Mohamad Al-zawahreh", email = "mohamad@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "flake8", "mypy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
